# Make-Market-Great-Again

./: .env.template  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
dagster/dagster_home/: dagster.yaml  workspace.yaml
dagster/dagster_project/: jobs.py  repository.py
docker/: Dockerfile
src/: app.py  crawler.py  settings.py  utils.py
src/agent/: agent.py  prompt.py  tools.py  utils.py
src/database/: base.py  models.py
src/static/: style.css
src/templates/: index.html  subscribed.html  success.html
